# Codeforces-Problems

./: 00 - Checker.cpp  00 Checker.cpp  1005B. Delete from the Left.cpp  1283A. Minutes Before the New Year.cpp  1335A. Candies and Two Sisters.cpp  1496A. Split it!.cpp  1517A. Sum of 2050.cpp  1525A. Potion-making.cpp  1703B. ICPC Balloons.cpp  1792A. GamingForces.cpp  1873B. Good Kid.cpp  1927A. Make it White.cpp  2044A. Easy Problem.cpp  2044B. Normal Problem.cpp  2072A. New World, New Me, New Array.cpp  22A. Second Order Statistics.cpp  231A. Team.cpp  236A. Boy or Girl.cpp  266A. Stones on the table.cpp  318A. Even Odds.cpp  41A. Translation.cpp  939A. Love Triangle.cpp  977A. Wrong Subtraction.cpp  A. Watermelon .cpp  A. Wrong Subtraction (800).cpp  CMakeLists.txt  Tester.cpp  organize_by_rating.py
1000/: 579A. Raising Bacteria.cpp
1100/: 363B. Fence.cpp
1300/: 451B. Sort the Array.cpp
1400/: 2074D. Counting Points.cpp
800/: 116A. Tram.cpp  158A. Next Round.cpp  1742A. Sum.cpp  1853A. Desorting.cpp  1857A. Array Coloring.cpp  1900A. Cover in Water.cpp  2044C. Hard Problem.cpp  2094A. Trippi Troppi.cpp  2117B. Shrink.cpp  2227A. Koshary.cpp  263A. Beautiful Matrix.cpp  630A. Again Twenty Five!.cpp
900/: 1807D. Odd Queries.cpp  208A. Dubstep.cpp  405A. Gravity Flip.cpp  598A. Tricky Sum.cpp
99. Not submitted/: 2094D. Tung Tung Sahur.cpp  2106E. Wolf.cpp  271A. Beautiful Year.cpp
A/: 1167A. Telephone Number.cpp  1881A. Don't Try to Count.cpp  2070A. FizzBuzz Remixed.cpp  96A. Football.cpp
B/: 2106B. St. Chroma.cpp
C/: 2074C. XOR and Triangle.cpp  C. Simple Calculator.cpp
Contest Problems/: 2072B. Having Been a Treasurer in the Past, I Help Goblins Deceive.cpp  2074A. Draw a Square.cpp  2082B. Floor or Ceil.cpp  2106A. Dr. TC.cpp
Dailies/: 1792A. GamingForces.cpp  200B. Drinks.cpp  2062B. Clockwork.cpp  2078A. Final Verdict.cpp  50A. Domino piling.cpp  705A. Hulk.cpp  71A. Way Too Long Words.cpp
E/: E. Area of a Circle.cpp
G/: G. Summation from 1 to N.cpp
I/: I. Welcome for you with Conditions.cpp
J/: J. Multiples.cpp
N/: N. Char.cpp
Not submitted/: 2094B. Bobritto Bandito.cpp  2106C. Cherry Bomb.cpp  2106G1. Baudelaire (easy version).cpp
Other/: A. 1 to N.cpp  A. Add.cpp  A. Create A New String.cpp  A. Say Hello With C++.cpp  A. Summation.cpp  (+66 more)
(+16 files in other folders)
