cmake_minimum_required(VERSION 3.28)
project(CodeForces)

set(CMAKE_CXX_STANDARD 23)

add_executable(CodeForces "00 Checker.cpp" "tester.cpp"
        "2044C. Hard Problem.cpp"
        #        "2044B. Normal Problem.cpp"
        #        "2044A. Easy Problem.cpp"
        #        "158A. Next Round.cpp"
        #        "282A. Bit++.cpp"
        #        "231A. Team.cpp"
        #        "1792A. GamingForces.cpp"
        #        "939A. Love Triangle.cpp"
        #        "1A. Theatre Square.cpp"
        #        "977A. Wrong Subtraction.cpp"
        #        "4A. Watermelon .cpp"
        #        "71A. Way Too Long Words.cpp"
        #        "2008B. Square or Not.cpp"

)
