cmake_minimum_required(VERSION 3.28)
project(CodeForces)

set(CMAKE_CXX_STANDARD 23)

add_executable(CodeForces "00 Checker.cpp" "tester.cpp"
#        "1853A. Desorting.cpp"
        #        "1283A. Minutes Before the New Year.cpp"
        #        "1517A. Sum of 2050.cpp"
        #        "22A. Second Order Statistics.cpp"
        #        "1525A. Potion-making.cpp"
        #        "339A. Helpful Maths.cpp"
        #        "1881A. Don't Try to Count.cpp"
        #        "1974A. Phone Desktop.cpp"
        #        "1742A. Sum.cpp"
        #        "1335A. Candies and Two Sisters.cpp"
        #        "1722A. Spell Check.cpp"
        #        "705A. Hulk.cpp"
        #        "41A. Translation.cpp"
        #        "318A. Even Odds.cpp"
        #        "96A. Football.cpp"
        #        "266A. Stones on the table.cpp"
        #        "200B. Drinks.cpp"
        #        "236A. Boy or Girl.cpp"
        #        "50A. Domino piling.cpp"
        #        "2044C. Hard Problem.cpp"
        #        "2044B. Normal Problem.cpp"
        #        "2044A. Easy Problem.cpp"
        #        "158A. Next Round.cpp"
        #        "282A. Bit++.cpp"
        #        "231A. Team.cpp"
        #        "1792A. GamingForces.cpp"
        #        "939A. Love Triangle.cpp"
        #        "1A. Theatre Square.cpp"
        #        "977A. Wrong Subtraction.cpp"
        #        "4A. Watermelon .cpp"
        #        "71A. Way Too Long Words.cpp"
        #        "2008B. Square or Not.cpp"

)
